testdata/fixtures/negative/public-import/pkg/axle/contracts.go
package axle

import _ "example.com/app/internal/app/users"

const Bad = true
